Spectator backed by Micrometer for spring 1.5.x

--- a/kork-core/kork-core.gradle
+++ b/kork-core/kork-core.gradle
@@ -13,10 +13,12 @@ dependencies {
   api "com.netflix.spectator:spectator-ext-aws"
   api "com.netflix.spectator:spectator-ext-gc"
   api "com.netflix.spectator:spectator-ext-jvm"
+  api "com.netflix.spectator:spectator-reg-micrometer"
   api "com.netflix.spectator:spectator-web-spring"
   api project(":kork-secrets-aws")
   api "com.google.code.findbugs:jsr305"
   api "com.netflix.netflix-commons:netflix-eventbus"
+  api "io.micrometer:micrometer-spring-legacy"
   api "javax.inject:javax.inject:1"
   api "commons-configuration:commons-configuration"
 
