--- a/spinnaker-dependencies/spinnaker-dependencies.gradle
+++ b/spinnaker-dependencies/spinnaker-dependencies.gradle
@@ -24,12 +24,13 @@ ext {
     groovy        : "2.4.15",
     hystrix       : "1.4.21",
     jsch          : "0.0.9",
+    micrometer    : "1.1.0",
     okhttp        : "2.7.0",
     okhttp3       : "3.12.2",
     retrofit      : "1.9.0",
     retrofit2     : "2.5.0",
     slf4j         : "1.7.25",
-    spectator     : "0.75.0",
+    spectator     : "0.80.0",
     spek          : "1.1.5",
     swagger       : "2.7.0",
     testcontainers: "1.10.7",
@@ -71,6 +72,7 @@ dependencies {
     api("com.netflix.spectator:spectator-ext-aws:${versions.spectator}")
     api("com.netflix.spectator:spectator-ext-gc:${versions.spectator}")
     api("com.netflix.spectator:spectator-ext-jvm:${versions.spectator}")
+    api("com.netflix.spectator:spectator-reg-micrometer:${versions.spectator}")
     api("com.netflix.spectator:spectator-web-spring:${versions.spectator}")
     api("com.netflix.spinnaker.embedded-redis:embedded-redis:0.8.0")
     api("com.netflix.spinnaker.moniker:moniker:0.2.0")
@@ -90,6 +92,7 @@ dependencies {
     api("de.danielbechler:java-object-diff:0.95")
     api("de.huxhorn.sulky:de.huxhorn.sulky.ulid:8.2.0")
     api("dev.minutest:minutest:1.5.0")
+    api("io.micrometer:micrometer-spring-legacy:${versions.micrometer}")
     api("io.mockk:mockk:1.9.2")
     api("io.reactivex:rxjava:1.3.8")
     api("junit:junit:4.12")
